feat: custom home pages per relay
- Each relay serves a custom HTML page when accessed via browser (non-WebSocket)
- Custom pages stored in pages/{relay_id}.html directory (configurable via pages_dir)
- Default fallback page shows relay name, description, and Nostr badge
- Admin UI: HTML editor in relay edit form with preview and delete
- API: GET/PUT/DELETE /api/relays/:id/page endpoints
- Path traversal protection on relay ID validation
- pages_dir auto-created on gateway startup

--- a/moar.example.toml
+++ b/moar.example.toml
@@ -1,5 +1,8 @@
 domain = "localhost"
 port = 8080
+# Directory for custom relay home pages (default: "pages")
+# Place {relay_id}.html files here, or edit via the admin UI
+pages_dir = "pages"
 
 # DM Relay - Authenticated read/write, restricted to specific event kinds
 [relays.dms]
