--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,10 @@ tower = "0.5.3"
 tower-http = "0.6.8"
 hyper-util = "0.1.20"
 tower-service = "0.3.3"
+tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
+futures-util = "0.3.32"
 
 [dev-dependencies]
-futures-util = "0.3.32"
 tempfile = "3.10"
 tokio-tungstenite = "0.28.0"
 url = "2.5.8"
