feat: add Blossom media server support
Implement Blossom (BUD-01/02) protocol for uploading and serving media
files via HTTP, addressed by SHA-256 hash. Like relays, multiple Blossom
servers can run on different subdomains with independent policies.

- New `src/blossom/` module with auth (kind 24242), LMDB-backed blob
  store, and HTTP handlers (GET/HEAD/PUT/DELETE per spec)
- Blob files stored on disk sharded by first 2 hex chars, metadata in LMDB
- CORS enabled (allow all origins) for cross-origin client access
- BlobDescriptor URLs include file extension derived from MIME type
- Config: `BlossomConfig` structs with upload/list policies and max file size
- Gateway: subdomain routing for blossom servers, admin API for CRUD and
  media management (list/upload/delete via multipart)
- Subdomain uniqueness validated across both relays and blossom servers
- Admin UI: new "Blossom" tab with server list, create/edit form,
  and media gallery with upload, thumbnail preview, and delete

--- a/moar.example.toml
+++ b/moar.example.toml
@@ -73,3 +73,21 @@ allowed_pubkeys = ["npub1..."]
 require_auth = false
 
 [relays.outbox.policy.events]
+
+# ===== Blossom Media Servers =====
+
+# Media Server - Public media storage
+[blossoms.media]
+name = "Media Server"
+description = "Public media storage"
+subdomain = "media"
+storage_path = "data/blossom/media"
+
+[blossoms.media.policy]
+max_file_size = 104857600  # 100MB
+
+[blossoms.media.policy.upload]
+allowed_pubkeys = ["your-hex-pubkey-here"]
+
+[blossoms.media.policy.list]
+require_auth = false
