--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.36", features = ["full"] }
-axum = { version = "0.7", features = ["ws"] }
+axum = { version = "0.7", features = ["ws", "multipart"] }
 nostr = { version = "0.33", features = ["std", "default"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -20,11 +20,15 @@ once_cell = "1.19"
 uuid = { version = "1.8", features = ["v4"] }
 toml = "1.0.2"
 tower = "0.5.3"
-tower-http = "0.6.8"
+tower-http = { version = "0.6.8", features = ["cors"] }
 hyper-util = "0.1.20"
 tower-service = "0.3.3"
 tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
 futures-util = "0.3.32"
+sha2 = "0.10"
+base64 = "0.22"
+mime_guess = "2.0"
+tokio-util = { version = "0.7", features = ["io"] }
 
 [dev-dependencies]
 tempfile = "3.10"
