feat: migrate admin panel to Next.js with shadcn/ui
Replace the embedded Alpine.js admin panel with a standalone Next.js 14
application served on port 8888. The new admin UI uses shadcn/ui
components, TanStack Query for API state management, React Hook Form
with Zod validation, and NIP-07 browser extension login.

Architecture:
- Port 443: Caddy → moar (relays, blossom, API) — unchanged
- Port 8888: Caddy → Next.js (admin UI) + moar (API proxy)
- Session cookie is domain-scoped, so login works across both ports

Features:
- Relay management with preset selector (Public, Private, Outbox,
  Inbox, DM, Advanced) and full advanced form
- Blossom media server management with drag-and-drop upload and
  thumbnail grid browser
- Web of Trust management with status indicators and discovery relays
- Custom relay home page HTML editor with live preview
- Pending restart banner, toast notifications, loading skeletons
- Dark theme throughout

Deployment:
- docker-compose.yml: adds admin service, exposes port 8888
- docker-compose.dev.yml: local dev without TLS
- Caddyfile.template: adds :8888 site block
- install.sh: updated for admin build and new port
- Renamed moar service to server for clearer container names

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: docker/Dockerfile
     environment:
-      - MOAR_DOMAIN=${MOAR_DOMAIN}
+      - MOAR_DOMAIN=localhost
       - ADMIN_PUBKEY=${ADMIN_PUBKEY}
       - RUST_LOG=${RUST_LOG:-info}
     volumes:
@@ -26,23 +26,15 @@ services:
       - moar
 
   caddy:
-    build:
-      context: .
-      dockerfile: docker/Dockerfile.caddy
+    image: caddy:2-alpine
     ports:
-      - "80:80"
-      - "443:443"
       - "8888:8888"
+      - "8080:8080"
     volumes:
-      - caddy_data:/data
-      - caddy_config:/config
+      - ./docker/Caddyfile.dev:/etc/caddy/Caddyfile
     restart: unless-stopped
     networks:
       - moar
-
-volumes:
-  caddy_data:
-  caddy_config:
 
 networks:
   moar:
