--- a/docker/Caddyfile.template
+++ b/docker/Caddyfile.template
@@ -1,6 +1,6 @@
 {
     on_demand_tls {
-        ask http://moar:8080/.well-known/caddy-ask
+        ask http://server:8080/.well-known/caddy-ask
     }
 }
 
@@ -8,7 +8,19 @@
     tls {
         on_demand
     }
-    reverse_proxy moar:8080
+    reverse_proxy server:8080
+}
+
+:8888 {
+    tls {
+        on_demand
+    }
+    handle /api/* {
+        reverse_proxy server:8080
+    }
+    handle {
+        reverse_proxy admin:3000
+    }
 }
 
 :80 {
