--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ sha2 = "0.10"
 base64 = "0.22"
 mime_guess = "2.0"
 tokio-util = { version = "0.7", features = ["io"] }
+sysinfo = "0.32"
 
 [dev-dependencies]
 tempfile = "3.10"
