feat: add server restart and self-update from admin UI
Add a System tab to the admin panel with restart and update controls.
The restart button triggers a graceful process exit, relying on Docker's
restart policy to bring the server back, then polls until it recovers.

Self-update is handled by a new manager sidecar container that runs
git pull and docker compose rebuild when triggered from the admin UI.
Communication between the server and manager uses a shared secret
(MANAGER_SECRET) and a shared Docker volume for status updates.

- Add /api/restart, /api/update, and /api/update-status endpoints
- Add reqwest dependency for server-to-manager HTTP calls
- Add manager sidecar service (Python) with Dockerfile
- Add System page with restart and update cards with live status
- Enhance restart banner with inline restart button
- Update install.sh to generate MANAGER_SECRET
- Update docker-compose configs for manager service and shared volume

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,10 +7,12 @@ services:
       - MOAR_DOMAIN=localhost
       - ADMIN_PUBKEY=${ADMIN_PUBKEY}
       - RUST_LOG=${RUST_LOG:-info}
+      - MANAGER_SECRET=${MANAGER_SECRET:-dev-manager-secret}
     volumes:
       - ./data:/app/data
       - ./config:/app/config
       - ./pages:/app/data/pages
+      - manager_status:/status:ro
     restart: unless-stopped
     networks:
       - moar
@@ -29,12 +31,29 @@ services:
     image: caddy:2-alpine
     ports:
       - "8888:8888"
-      - "8080:8080"
+      - "80:80"
     volumes:
       - ./docker/Caddyfile.dev:/etc/caddy/Caddyfile
     restart: unless-stopped
     networks:
       - moar
+
+  manager:
+    build:
+      context: ./docker/manager
+      dockerfile: Dockerfile
+    environment:
+      - MANAGER_SECRET=${MANAGER_SECRET:-dev-manager-secret}
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - .:/project:rw
+      - manager_status:/status:rw
+    restart: unless-stopped
+    networks:
+      - moar
+
+volumes:
+  manager_status:
 
 networks:
   moar:
