--- a/moar.example.toml
+++ b/moar.example.toml
@@ -6,28 +6,28 @@ admin_pubkey = "your-hex-pubkey-here"
 # Place {relay_id}.html files here, or edit via the admin UI
 pages_dir = "pages"
 
-# DM Relay - Anyone can write if tagging your pubkey, only you can read
-[relays.dms]
-name = "DM Relay"
-description = "Private direct messages"
-subdomain = "dm"
-db_path = "data/dm.mdb"
+# ===== Web of Trust =====
 
-[relays.dms.policy.write]
-require_auth = false
-# Events must tag one of these pubkeys to be accepted
-tagged_pubkeys = ["npub1..."]
+[wots.default]
+seed = "your-hex-pubkey-here"
+depth = 2
+update_interval_hours = 24
 
-[relays.dms.policy.read]
-require_auth = true
-allowed_pubkeys = ["npub1..."]
+# ===== Relays =====
 
-[relays.dms.policy.events]
-allowed_kinds = [
-    4,
-    1059,
-    5,
-]
+# Outbox Relay - Public read, whitelisted write
+[relays.outbox]
+name = "My Outbox"
+description = "Only I can post here"
+subdomain = "outbox"
+db_path = "data/outbox.mdb"
+
+[relays.outbox.policy.write]
+allowed_pubkeys = ["your-hex-pubkey-here"]
+
+[relays.outbox.policy.read]
+
+[relays.outbox.policy.events]
 
 # Inbox Relay - Anyone can write if tagging your pubkey, open read
 [relays.inbox]
@@ -37,11 +37,48 @@ subdomain = "inbox"
 db_path = "data/inbox.mdb"
 
 [relays.inbox.policy.write]
-tagged_pubkeys = ["npub1..."]
+tagged_pubkeys = ["your-hex-pubkey-here"]
 
 [relays.inbox.policy.read]
 
 [relays.inbox.policy.events]
+
+# Private Relay - Only the owner can read and write
+[relays.private]
+name = "Private"
+description = "Private notes — only the owner can read and write"
+subdomain = "private"
+db_path = "data/private.mdb"
+
+[relays.private.policy.write]
+require_auth = true
+allowed_pubkeys = ["your-hex-pubkey-here"]
+
+[relays.private.policy.read]
+require_auth = true
+allowed_pubkeys = ["your-hex-pubkey-here"]
+
+# DM Relay - WoT gated direct messages
+[relays.dms]
+name = "DM Relay"
+description = "Private direct messages — WoT gated"
+subdomain = "dm"
+db_path = "data/dm.mdb"
+
+[relays.dms.policy.write]
+tagged_pubkeys = ["your-hex-pubkey-here"]
+wot = "default"
+
+[relays.dms.policy.read]
+require_auth = true
+wot = "default"
+
+[relays.dms.policy.events]
+allowed_kinds = [
+    4,
+    1059,
+    5,
+]
 
 # Public Relay - Open to everyone
 [relays.public]
@@ -58,29 +95,13 @@ require_auth = false
 
 [relays.public.policy.events]
 
-# Outbox Relay - Public read, whitelisted write
-[relays.outbox]
-name = "My Outbox"
-description = "Only I can post here"
-subdomain = "outbox"
-db_path = "data/outbox.mdb"
-
-[relays.outbox.policy.write]
-require_auth = false
-allowed_pubkeys = ["npub1..."]
-
-[relays.outbox.policy.read]
-require_auth = false
-
-[relays.outbox.policy.events]
-
 # ===== Blossom Media Servers =====
 
-# Media Server - Public media storage
+# Blossom - Media storage with owner-only uploads
 [blossoms.media]
-name = "Media Server"
-description = "Public media storage"
-subdomain = "media"
+name = "Blossom"
+description = "Blossom media server"
+subdomain = "blossom"
 storage_path = "data/blossom/media"
 
 [blossoms.media.policy]
