feat: enforce per-IP rate limits, connection limits, and NIP-11 limits
Add real enforcement for rate limits and NIP-11 limits that were
previously configured but never checked. All limits are per-IP using
a shared DashMap-based tracker.

Rate limiting (per-IP):
- Sliding-window write rate limiting (default: 20/min)
- Sliding-window read rate limiting (default: 60/min)
- Connection limit with 503 rejection (default: 5/IP)
- IP extracted from X-Forwarded-For header for reverse proxy support
- Background cleanup task evicts stale entries every 5 minutes

NIP-11 enforcement:
- max_message_length checked before parsing (default: 512KB)
- max_event_tags rejects events with too many tags (default: 2500)
- created_at_lower_limit rejects events too far in past (default: 3yr)
- created_at_upper_limit rejects events too far in future (default: 15m)
- max_subscriptions caps active subs per connection (default: 20)
- max_subid_length rejects oversized subscription IDs (default: 64)
- max_limit clamps query limits, default_limit applied when unset

Config changes:
- RateLimitConfig gains max_connections field
- rate_limit changed from Option to serde(default) with sensible defaults
- Nip11Config gets manual Default impl with production-safe values

Also includes relay stats tracking and admin dashboard stats UI.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,7 +6,7 @@ services:
     environment:
       - MOAR_DOMAIN=localhost
       - ADMIN_PUBKEY=${ADMIN_PUBKEY}
-      - RUST_LOG=${RUST_LOG:-info}
+      - RUST_LOG=debug
       - MANAGER_SECRET=${MANAGER_SECRET:-dev-manager-secret}
     volumes:
       - ./data:/app/data
@@ -18,11 +18,16 @@ services:
       - moar
 
   admin:
-    build:
-      context: ./admin
-      dockerfile: Dockerfile
+    image: node:20-alpine
+    working_dir: /app
+    command: sh -c "npm install && npm run dev"
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
+      - WATCHPACK_POLLING=true
+    volumes:
+      - ./admin:/app
+      - admin_node_modules:/app/node_modules
+      - /app/.next
     restart: unless-stopped
     networks:
       - moar
@@ -54,6 +59,8 @@ services:
 
 volumes:
   manager_status:
+  admin_node_modules:
+
 
 networks:
   moar:
