--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ tokio-util = { version = "0.7", features = ["io"] }
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
 rand = "0.8"
 qrcode = "0.14"
+sysinfo = "0.33"
+dashmap = "6"
 
 [dev-dependencies]
 tempfile = "3.10"
